Refactoring dos calculos dos digitos nos modulos 10 e 11